# coffee

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  License.md  README.md
apps/: CMakeLists.txt  main.cpp
docs/: architecture.md
include/coffee/: Animation.h  AnimationState.h  AnimationSystem.h  Assets.h  CoffeeGame.h  ISystem.h  InputHandler.h  Level.h  Movement.h  MovementSystem.h  NpcSystem.h  PlayerInput.h  PlayerSystem.h  Scene.h  Signal.h  TargetSystem.h  coffee.h  common_error.h  components.h
src/: Animation.cpp  AnimationState.cpp  AnimationSystem.cpp  Assets.cpp  CMakeLists.txt  CoffeeGame.cpp  InputHandler.cpp  Level.cpp  Movement.cpp  MovementSystem.cpp  NpcSystem.cpp  PlayerInput.cpp  PlayerSystem.cpp  Scene.cpp  TargetSystem.cpp  coffee.cpp
tests/: CMakeLists.txt  EntityTests.cpp  LevelTests.cpp  SceneTests.cpp  SignalTests.cpp
